--- a/python_backend_services/.env
+++ b/python_backend_services/.env
@@ -1,8 +1,8 @@
-SOURCE_DOCUMENTS_DIR="/home/sidarta/PycharmProjects/bm25_mistral_legal_assistant_v2/python_backend_services/source_documents/petitions/"
-GLOSSARY_FILE_PATH="/home/sidarta/PycharmProjects/bm25_mistral_legal_assistant_v2/python_backend_services/shared_data/glossario.tsv"
+SOURCE_DOCUMENTS_DIR="/home/sidarta/PycharmProjects/bm25_mistral/python_backend_services/source_documents/petitions/"
+GLOSSARY_FILE_PATH="/home/sidarta/PycharmProjects/bm25_mistral/python_backend_services/shared_data/glossario.tsv"
 ELASTICSEARCH_HOST="http://localhost:9200"
 ELASTICSEARCH_INDEX_NAME="legal_petitions_v2"
-# ELASTICSEARCH_USER="your_es_user" # Optional
-# ELASTICSEARCH_PASSWORD="your_es_password" # Optional
+ELASTICSEARCH_USER="sidarta.martins@yahoo.com" # Optional
+ELASTICSEARCH_PASSWORD="Paracue10!" # Optional
 OLLAMA_API_URL="http://localhost:11434/api/generate"
 LOG_LEVEL="INFO"
