Commit Etapa Google Drive

--- a/python_backend_services/requirements.txt
+++ b/python_backend_services/requirements.txt
@@ -27,4 +27,5 @@ sentence-transformers # If doing embedding generation
 ##For data ingestion if you use pandas for TSV or other structured data
 pandas
 
-gspread google-auth
+gspread
+google-auth
